--- a/showmiiminiproject/src/pages/EditImageInfo/EditImageInfo.css
+++ b/showmiiminiproject/src/pages/EditImageInfo/EditImageInfo.css
@@ -5,14 +5,12 @@
 
 .sub-maindiv-image{
     margin-right: 40px;
-    display: flex;
 }
 
 .image-show{
     border-radius: 30px;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     width: 500px;
-    height: 100%;
 }
 
 .sub-maindiv-infos{
@@ -56,7 +54,12 @@
     outline: none;
 }
 
-.form-part-final{
+
+
+
+.form-final-container{
+    display: flex;
+    justify-content: space-between;
     margin-top: 80px;
 }
 
@@ -68,5 +71,15 @@
 
 .finish-btn{
     background-color: #8338EC;
+    box-shadow: 2px 3px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+.red-btn{
+    background-color: #FF006E;
+    box-shadow: 2px 3px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+.red-btn:hover{
+    background-color: rgb(229, 122, 145);
     box-shadow: 2px 3px 4px 0px rgba(0, 0, 0, 0.25);
 }
