--- a/showmiiminiproject/src/pages/Register/Register.css
+++ b/showmiiminiproject/src/pages/Register/Register.css
@@ -76,7 +76,10 @@
     box-shadow: 0px 4px 4px 0px rgb(160, 107, 220);
     outline: none;
 }
-
+.register-form-final-btn{
+    display: flex;
+    justify-content: center;
+}
 .btn-form{
     width: 100%;
 }
@@ -85,9 +88,20 @@
     background-color: #8338EC;
     color: white;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    transition: 0.5s;
 }
 .blue-btn{
     background-color: #A2D2FF;
     color: black;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    transition: 0.5s;
 }
+
+.register-alert{
+    background-color: rgb(190, 255, 190);
+    color: green;
+    transition: 0.5s;
+    padding: 5px 15px;
+    border-radius: 30px;
+}
+
