--- a/showmiiminiproject/src/essentialcss/essentialcss.css
+++ b/showmiiminiproject/src/essentialcss/essentialcss.css
@@ -113,3 +113,21 @@ font-weight: 300;
     justify-content: center;
     margin-bottom: 25px;
 }
+
+.hover-as-pointer{
+    cursor: pointer;
+}
+
+.link-no-decor-black{
+    text-decoration: none;
+    color: black;
+}
+
+.div-for-p-flex{
+    display: flex;
+}
+
+.btn-darkblue{
+    background-color: #5093ff;
+    box-shadow: 2px 3px 4px 0px rgba(0, 0, 0, 0.25);
+}
