--- a/showmiiminiproject/src/pages/Explore/Explore.css
+++ b/showmiiminiproject/src/pages/Explore/Explore.css
@@ -15,7 +15,7 @@
 .image-container{
     width: 235px;
     height: 100%;
-    min-height: 400px;
+    min-height: 300px;
     background-color: rgb(199, 198, 243);
     margin:  10px;
     border-radius: 30px;
@@ -40,3 +40,14 @@
     transition-timing-function: ease-out;
     cursor: pointer;
 }
+
+.explore-img-nostyle{
+    text-decoration: none;
+    color: black;
+}
+.word { 
+            width: 100%; 
+            overflow-wrap: break-word; 
+            word-wrap: break-word; 
+            word-break: break-word; 
+        } 
